feat: rename to ClawTouch, refactor page.tsx, add docs
- Rename project from WebClaw to ClawTouch across all references
- Extract useChat, useAttachments, useVoiceInput hooks from page.tsx
  (1240 → 610 lines)
- Remove hardcoded gateway token (security fix)
- Add README.md, LICENSE (MIT), and .env.example
- Clean up test uploads from public/uploads/

via [HAPI](https://hapi.run)

Co-Authored-By: HAPI <noreply@hapi.run>

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "WebClaw",
-  "short_name": "WebClaw",
-  "description": "OpenClaw 移动端管理面板",
+  "name": "ClawTouch",
+  "short_name": "ClawTouch",
+  "description": "Mobile-first control panel for OpenClaw agents",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f8fafc",
